[package]
name = "actix-sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.2.0"
actix-web-actors="3"
actix = "0.10.0" # actors
uuid = { version = "0.8", features = ["v4", "serde"] }
